--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@yunke/server-scripts",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "server scripts",
   "main": "./bin/server-scripts.js",
   "bin": {
@@ -16,6 +16,7 @@
   ],
   "license": "ISC",
   "dependencies": {
+    "commander": "^2.11.0",
     "cross-spawn": "^5.1.0",
     "pm2": "^2.5.0"
   }
