--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@yunke/server-scripts",
+  "name": "@yued/server-scripts",
   "version": "1.3.3",
   "description": "server scripts",
   "main": "./bin/server-scripts.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@git.mysoft.com.cn:yued/server-scripts.git"
+    "url": "https://github.com/yunkeCN/server-scripts.git"
   },
   "keywords": [
     "server",
