--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
     "commander": "^2.11.0",
     "cross-spawn": "^5.1.0",
     "pm2": "^2.5.0"
+  },
+  "devDependencies": {
+    "@types/cross-spawn": "^6.0.0",
+    "@types/node": "^10.9.4"
   }
 }
